# fastapi-task

./: Dockerfile  README.md  alembic.ini  compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 976646cb2282_initial_migration.py
api_docs/: create_project.md  update_project.md
src/: app.py  config.py  exceptions.py  main.py  models.py  parsers.py  repositories.py  services.py
src/api/: deps.py  schemas.py
src/api/endpoints/: project.py
src/infrastucture/: db.py
tests/: conftest.py  test_endpoints.py
